3.02-Back-to-Ingress/manifests/ping-pong-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: main-and-pingpong-apps-namespace
  name: ping-pong-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong-app
  template:
    metadata:
      labels:
        app: ping-pong-app
    spec:
      containers:
        - name: ping-pong-app
          image: mickeckemi21/ping-pong-app:3.02
          livenessProbe:
            initialDelaySeconds: 3
            periodSeconds: 3
            httpGet:
              path: /actuator/health/liveness
              port: 8089
          readinessProbe:
            initialDelaySeconds: 3
            periodSeconds: 3
            httpGet:
              path: /actuator/health/readiness
              port: 8089
