3.02-Back-to-Ingress/manifests/main-application-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: main-and-pingpong-apps-namespace
  name: main-application-svc
spec:
  type: NodePort
  selector:
    app: main-application
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
