3.02-Back-to-Ingress/manifests/ping-pong-app-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: main-and-pingpong-apps-namespace
  name: ping-pong-app-svc
spec:
  type: NodePort
  selector:
    app: ping-pong-app
  ports:
    - port: 8585
      protocol: TCP
      targetPort: 8089
